--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "@vercel/postgres": "^0.10.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
